[gd_scene load_steps=3 format=2]

[ext_resource path="res://simulator/EnemyGeneratorSimulator.gd" type="Script" id=1]
[ext_resource path="res://simulator/dynamicfont.tres" type="DynamicFont" id=2]

[node name="EnemyGenerator" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = -84.7088
margin_top = -46.4269
margin_right = 86.2912
margin_bottom = 39.5731

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 164.0
margin_bottom = 79.0

[node name="TypeContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_right = 157.0
margin_bottom = 20.0
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/TypeContainer"]
margin_left = 9.0
margin_top = 3.0
margin_right = 67.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 2 )
text = "Enemy Type"

[node name="EnemyType" type="OptionButton" parent="PanelContainer/VBoxContainer/TypeContainer"]
margin_left = 71.0
margin_right = 148.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 2 )
text = "Turret"
items = [ "Turret", null, false, 1, null, "Tank", null, false, 2, null, "Runner", null, false, 3, null, "Drone", null, false, 4, null, "UFO", null, false, 5, null, "Protector", null, false, 6, null ]
selected = 0

[node name="LevelContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 157.0
margin_bottom = 48.0
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/LevelContainer"]
margin_left = 44.0
margin_top = 5.0
margin_right = 74.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 2 )
text = "LEVEL"

[node name="Level" type="LineEdit" parent="PanelContainer/VBoxContainer/LevelContainer"]
margin_left = 78.0
margin_right = 112.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 2 )
text = "1"
max_length = 2

[node name="ButtonContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 157.0
margin_bottom = 72.0
alignment = 1

[node name="CreateButton" type="Button" parent="PanelContainer/VBoxContainer/ButtonContainer"]
margin_left = 54.0
margin_right = 102.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 2 )
text = "CREATE"
[connection signal="text_changed" from="PanelContainer/VBoxContainer/LevelContainer/Level" to="." method="_on_Level_text_changed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ButtonContainer/CreateButton" to="." method="_on_CreateButton_pressed"]
